--- a/demo/config.yaml
+++ b/demo/config.yaml
@@ -25,6 +25,9 @@ user:
     root_certificate: ${MC2_CLIENT_HOME}/demo/keys/root.crt
     root_private_key: ${MC2_CLIENT_HOME}/demo/keys/root.pem
 
+    #User-defined port
+    port: 5002
+
 # Configuration for launching cloud resources
 launch:
     # The absolute path to your Azure configuraton
